outputs nodes generated